--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.8.3",
+    "typescript": "^3.8.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
